--- a/MILESTONE-01/MODULE-01/Portfolio Website/index.html
+++ b/MILESTONE-01/MODULE-01/Portfolio Website/index.html
@@ -58,23 +58,74 @@
 				<div class="about-info-container">
 					<!-- .about-info*4>h4.info-title+p.info-description -->
 					<div class="about-info">
-						<h4 class="info-title"></h4>
-						<p class="info-description"></p>
+						<h4 class="info-title">Name</h4>
+						<p class="info-description">Mary Hardy</p>
 					</div>
 					<div class="about-info">
-						<h4 class="info-title"></h4>
-						<p class="info-description"></p>
+						<h4 class="info-title">Date of Birth:</h4>
+						<p class="info-description">11 November 1987</p>
 					</div>
 					<div class="about-info">
-						<h4 class="info-title"></h4>
-						<p class="info-description"></p>
+						<h4 class="info-title">Email:</h4>
+						<p class="info-description">info@gmail.com</p>
 					</div>
 					<div class="about-info">
-						<h4 class="info-title"></h4>
-						<p class="info-description"></p>
+						<h4 class="info-title">From</h4>
+						<p class="info-description">Los Angeles,USA</p>
 					</div>
 				</div>
 			</section>
+
+			<!-- what i do section -->
+
+			<section class="what-i-do">
+				<h3 class="what-i-do-section-title">What I Do</h3>
+				<p class="what-i-do-paragraph">
+					I have more than 10 years Lorem ipsum dolor, sit amet consectetur
+					adipisicing elit. Esse natus vel voluptatem aliquam id sunt ipsa,
+					accusantium unde quisquam exercitationem!
+				</p>
+			</section>
+			<!-- what i do section -->
+
+			<div class="skills-container">
+				<div class="skills">
+					<img
+						src="./portfolio-resources/images/icons/js.png"
+						alt=""
+						class="skills-img"
+					/>
+					<h3 class="skills-heading">Javascript</h3>
+					<p class="skills-paragraph">This is Javascript</p>
+				</div>
+				<div class="skills">
+					<img
+						src="./portfolio-resources/images/icons/mongo.png"
+						alt=""
+						class="skills-img"
+					/>
+					<h3 class="skills-heading">Mongo</h3>
+					<p class="skills-paragraph">This is MongoDb</p>
+				</div>
+				<div class="skills">
+					<img
+						src="./portfolio-resources/images/icons/nodejs.png"
+						alt=""
+						class="skills-img"
+					/>
+					<h3 class="skills-heading">Node-Js</h3>
+					<p class="skills-paragraph">This is NodeJs</p>
+				</div>
+				<div class="skills">
+					<img
+						src="./portfolio-resources/images/icons/react.png"
+						alt=""
+						class="skills-img"
+					/>
+					<h3 class="skills-heading">React</h3>
+					<p class="skills-paragraph">This is React</p>
+				</div>
+			</div>
 		</main>
 	</body>
 </html>
