--- a/MILESTONE-01/MODULE-01(AGAIN)/second.html
+++ b/MILESTONE-01/MODULE-01(AGAIN)/second.html
@@ -1,3 +1,18 @@
 Look Mama !!!! I can build websites I am strong I am hard working
 
 <p>Paragraph Tag</p>
+
+<p>Look Mama,I can code</p>
+
+<p>I am <b>serious </b>about timings</p>
+
+
+<p>Paragraph Tag is : <p></p>       </p>
+
+<p>Bold Tag :</p>
+
+<p>Strong Tag is </p>
+
+<p>Italic Tag</p>
+
+<p>This is <i>italic</i> Tag</p>
