--- a/MILESTONE-01/MODULE-01(AGAIN)/forms.html
+++ b/MILESTONE-01/MODULE-01(AGAIN)/forms.html
@@ -2,3 +2,11 @@
 
 <input type="text" name="" id="" />
 <input type="password" name="" id="" />
+
+<input type="file" name="" id="" />
+
+<select name="" id="">
+	<option value="tea">Tea</option>
+
+	<option value=""></option>
+</select>
