--- a/A_MILESTONE-01/Module-04/blog.html
+++ b/A_MILESTONE-01/Module-04/blog.html
@@ -10,9 +10,30 @@
 		<header>
 			<nav>
 				<ul>
-					<li><a href="">Home</a></li>
-					<li><a href="">Blogs</a></li>
-					<li><a href="">About</a></li>
+					<li><a href="forms.html">Home</a></li>
+					<li>
+						<a href="table.html">Blogs</a>
+						<ul class="dropdown">
+							<li><a href="forms.html">Home</a></li>
+							<li><a href="table.html">Blogs</a></li>
+							<li><a href="audio&video.html">About</a></li>
+						</ul>
+					</li>
+					<li>
+						<a href="audio&video.html">About</a>
+						<ul class="dropdown">
+							<li><a href="forms.html">Home</a></li>
+							<li><a href="table.html">Blogs</a></li>
+							<li>
+								<a href="audio&video.html">About</a>
+								<ul class="dropdown">
+									<li><a href="forms.html">Home</a></li>
+									<li><a href="table.html">Blogs</a></li>
+									<li><a href="audio&video.html">About</a></li>
+								</ul>
+							</li>
+						</ul>
+					</li>
 				</ul>
 			</nav>
 		</header>
