--- a/A_MILESTONE-01/Module-06(Portfolio Website)/index.html
+++ b/A_MILESTONE-01/Module-06(Portfolio Website)/index.html
@@ -4,9 +4,25 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Web Developer Portfolio</title>
+		<link rel="stylesheet" href="styles.css" />
+
+		<style>
+			@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
+		</style>
 	</head>
-	<body>
-		<section id="header-section"><header></header></section>
+	<body class="open-sans-normal">
+		<section id="header-section">
+			<header>
+				<nav id="nav-bar">
+					<h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
+					<ul>
+						<li><a href="">Portfolio</a></li>
+						<li><a href="">Blog</a></li>
+						<li><button>Hire Me</button></li>
+					</ul>
+				</nav>
+			</header>
+		</section>
 
 		<section id="main-section"><main></main></section>
 
